bitsandbytes/bnb/tests/ui/bin_count_prefix_bad_type.stderr
error[E0277]: the trait bound `String: BitDecode` is not satisfied
 --> tests/ui/bin_count_prefix_bad_type.rs:8:26
  |
8 |     #[brw(count_prefix = String)]
  |                          ^^^^^^ the trait `BitDecode` is not implemented for `String`
  |
  = help: the following other types implement trait `BitDecode`:
            Frame
            UInt<T, N>
            bool
            u128
            u16
            u32
            u64
            u8

error[E0277]: `String` cannot be a `count_prefix` type
 --> tests/ui/bin_count_prefix_bad_type.rs:8:26
  |
8 |     #[brw(count_prefix = String)]
  |                          ^^^^^^ the trait `CountPrefix` is not implemented for `String`
  |
  = note: supported prefix types: u8, u16, u32, u64, u128 and the arbitrary-width `uN` aliases (e.g. `u12`)
  = note: this trait is sealed — the supported prefix types are built in
  = help: the following other types implement trait `CountPrefix`:
            UInt<u128, N>
            UInt<u16, N>
            UInt<u32, N>
            UInt<u64, N>
            UInt<u8, N>
            u128
            u16
            u32
          and $N others

error[E0277]: the trait bound `String: Bits` is not satisfied
 --> tests/ui/bin_count_prefix_bad_type.rs:9:5
  |
5 | #[bin]
  | ------ required by a bound introduced by this call
...
9 |     items: Vec<u8>,
  |     ^^^^^ the trait `Bits` is not implemented for `String`
  |
  = help: the following other types implement trait `Bits`:
            UInt<u128, N>
            UInt<u16, N>
            UInt<u32, N>
            UInt<u64, N>
            UInt<u8, N>
            bool
            u128
            u16
          and $N others
note: required by a bound in `bnb::Sink::write`
 --> src/bitstream.rs
  |
  |     fn write<T: Bits>(&mut self, value: T) -> Result<(), BitError> {
  |                 ^^^^ required by this bound in `Sink::write`
